# cpp20_modules_with_nix

./: CMakeLists.txt  default.nix  lib.cxx  main.cxx
